@@ -34,7 +34,7 @@ public:
              QTextStream* logStream = NULL);
 
     /** Analyses the the given position */
-    bool startAnalysis(const Board& board, int nv, int mt);
+    bool startAnalysis(const Board& board, int nv, int mt, bool bNewGame);
 
     /** Stops any analysis */
     void stopAnalysis();
